Dernière correction tablette

--- a/docs/Pages/_menu.scss
+++ b/docs/Pages/_menu.scss
@@ -337,24 +337,26 @@
             display: flex;
             flex-direction: column;
             .forcenter{
-                display: flex;
-                justify-content: center;
-                padding-bottom: 15px;
-                .bloc{
+                margin-left: 0px;
+                .blocanim{
                     display: flex;
-                    flex-direction: column;
-                    background-color: white;
-                    border-radius: 15px 15px 15px 15px;
-                    padding-left: 10px;
-                    width: 90%;
-                    height: 75px;
-                    .bloctext{
+                    justify-content: center;
+                    .bloc{
                         display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        padding-right: 15px;
-                        position: relative;
-                        bottom: 30%;
+                        flex-direction: column;
+                        background-color: white;
+                        border-radius: 15px 15px 15px 15px;
+                        padding-left: 10px;
+                        width: 90%;
+                        height: 75px;
+                        .bloctext{
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            padding-right: 15px;
+                            position: relative;
+                            bottom: 30%;
+                        }
                     }
                 }
             }
@@ -381,24 +383,26 @@
             display: flex;
             flex-direction: column;
             .forcenter{
-                display: flex;
-                justify-content: center;
-                padding-bottom: 15px;
-                .bloc{
+                margin-left: 0px;
+                .blocanim{
                     display: flex;
-                    flex-direction: column;
-                    background-color: white;
-                    border-radius: 15px 15px 15px 15px;
-                    padding-left: 10px;
-                    width: 90%;
-                    height: 75px;
-                    .bloctext{
+                    justify-content: center;
+                    .bloc{
                         display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        padding-right: 15px;
-                        position: relative;
-                        bottom: 30%;
+                        flex-direction: column;
+                        background-color: white;
+                        border-radius: 15px 15px 15px 15px;
+                        padding-left: 10px;
+                        width: 90%;
+                        height: 75px;
+                        .bloctext{
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            padding-right: 15px;
+                            position: relative;
+                            bottom: 30%;
+                        }
                     }
                 }
             }
@@ -508,9 +512,7 @@
         .bur{
             display: flex;
             .forcenter{
-                display: flex;
-                justify-content: center;
-                margin: 0px;
+                margin-left: 0px;
                 .blocanim{
                     display: flex;
                     justify-content: center;
