--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1144,11 +1144,13 @@ body footer a .foot .fa-hands-helping {
     flex-direction: column;
   }
   .entree .bur .forcenter {
+    margin-left: 0px;
+  }
+  .entree .bur .forcenter .blocanim {
     display: flex;
     justify-content: center;
-    padding-bottom: 15px;
   }
-  .entree .bur .forcenter .bloc {
+  .entree .bur .forcenter .blocanim .bloc {
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -1157,7 +1159,7 @@ body footer a .foot .fa-hands-helping {
     width: 90%;
     height: 75px;
   }
-  .entree .bur .forcenter .bloc .bloctext {
+  .entree .bur .forcenter .blocanim .bloc .bloctext {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1188,11 +1190,13 @@ body footer a .foot .fa-hands-helping {
     flex-direction: column;
   }
   .plat .bur .forcenter {
+    margin-left: 0px;
+  }
+  .plat .bur .forcenter .blocanim {
     display: flex;
     justify-content: center;
-    padding-bottom: 15px;
   }
-  .plat .bur .forcenter .bloc {
+  .plat .bur .forcenter .blocanim .bloc {
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -1201,7 +1205,7 @@ body footer a .foot .fa-hands-helping {
     width: 90%;
     height: 75px;
   }
-  .plat .bur .forcenter .bloc .bloctext {
+  .plat .bur .forcenter .blocanim .bloc .bloctext {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1312,9 +1316,7 @@ body footer a .foot .fa-hands-helping {
     display: flex;
   }
   .entree .bur .forcenter {
-    display: flex;
-    justify-content: center;
-    margin: 0px;
+    margin-left: 0px;
   }
   .entree .bur .forcenter .blocanim {
     display: flex;
